# axum-api-server8

./: .gitignore  Cargo.toml  README.md  api-tests.ps1  build.rs  env.template
db/: dbContainer.yaml  seed.sql
proto/: calculator.proto
src/: client.rs  database.rs  graphql.rs  grpc.rs  handlers.rs  main.rs  middleware.rs  model.rs  users.rs  utils.rs
src/entities/: users.rs
