[package]
name = "axum-postgresql-8a"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
dotenvy = { version = "0.15.7" }
tokio-postgres = "0.7.13"
deadpool-postgres = { version = "0.14.1" }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "macros",
  "sqlite",
  "runtime-tokio",
  "runtime-tokio-native-tls",
  "tls-native-tls",
] }
axum_session_sqlx = { version = "0.5.0", features = ["sqlite", "tls-rustls"] }
axum_session = "0.16.0"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing-subscriber = "0.3.19"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
