[package]
name = "axum-postgresql-8a"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
#anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
tokio = { version = "1.45.1", features = ["full"] }
dotenvy = { version = "0.15.7" }
tokio-postgres = { version = "0.7.13", features = [] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
sea-orm = { version = "1.1.12", features = [
  "sqlx-postgres",
  "debug-print",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "with-rust_decimal",
] }
sqlx = { version = "0.8.6", features = [
  "postgres",
  "macros",
  "runtime-tokio-native-tls",
] }
#[profile.dev.package.sqlx-macros]
#opt-level = 3
log = "0.4.27"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
#uuid = { version = "1.17.0", features = ["v4", "serde"] }

axum_session_sqlx = { version = "0.5.0", features = ["sqlite", "tls-rustls"] }
axum_session = "0.16.0"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }

prost = "0.13.5"
tonic = { version = "0.13.1", features = ["router"] }
tonic-reflection = "0.13.1"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"

[build-dependencies]
tonic-build = "0.13.1"
